# sol_transfer

./: Cargo.toml
data/: config.yaml
src/: main.rs  util.rs
src/util/: get_key.rs  read_config.rs  transfer.rs
