[package]
name = "transfer_token"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.116"
anyhow = "1.0.98"
bs58 = "0.5.1"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
